@@ -71,6 +71,9 @@ Changes in ATK 5.3
   modules. [Ivo]
 + Added setWidth() and getWidth() function to atkListAttribute to set the
   width of dropdown list in pixels. [Boy]
+* Fixed a bug in the paging feature of an o2m relation. A selectDb always returned
+  a maximum records of config_recordsperpage. [Martin] 
+* Layout improvements on the o2m embedded add form. [Martin]
 * Fixed menuitem translations for the outlook and plain menu. [Martin]
 * ATK now has a smaller memory footprint and less overhead, due to cleanup 
   of includes. [Peter, Boy, Ivo]
